<resources>
    <string name="app_name">MiExamen</string>
    <string name="adivinalo">Adivinalo</string>
    <string name="adivina">ADIVINA</string>
    <string name="empezar">EMPEZAR</string>
    <string name="acerda_de">ACERDA DE</string>
    <string name="puntuaci_n_mas_alta">Puntuación mas alta</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="confirmar">Confirmar</string>
    <string name="By">Hecho por:</string>
    <string name="creador">Beicker Ranzet Velasco Anco</string>
    <string name="maxpuntuacion">Máxima Puntuación</string>
    <string name="imagenaleatoria">imagenaleatoria</string>
    <string name="correcto">Correcto</string>
    <string name="incorrecto">Incorrecto</string>
    <string name="vidainicial">Vidas: 3</string>
    <string name="siguiente">Siguiente</string>
    <string name="magneto">Magneto</string>
    <string name="iron_man">Iron Man</string>
    <string name="destroyer">Destroyer</string>
    <string name="black_widow">Black Widow</string>
    <string name="respuestas">Respuestas</string>
    <string name="apocalypse">Apocalypse</string>
    <string name="wolverine">Wolverine</string>
    <string name="carnage">Carnage</string>
    <string name="daredevil">Daredevil</string>
    <string name="deadpool">Deadpool</string>
    <string name="doom">Doom</string>
    <string name="falcon">Falcon</string>
    <string name="galactus">Galactus</string>
    <string name="ghost_rider">Ghost Rider</string>
    <string name="gambit">Gambit</string>
    <string name="mysterio">Mysterio</string>
    <string name="quick_silver">Quick Silver</string>
    <string name="she_hulk">She Hulk</string>
    <string name="vision">Vision</string>
    <string name="venom">Venom</string>
    <string name="thanos">Thanos</string>
    <string name="ultron">Ultron</string>
    <string name="spider_man">Spider Man</string>
    <string name="red_hulk">Red Hulk</string>
    <string name="thor">Thor</string>
    <string name="storm">Storm</string>
    <string name="punisher">Punisher</string>
    <string name="groot">Groot</string>
    <string name="escuela_profesional_de_ingenier_a_electr_nica">Escuela Profesional de Ingeniería Electrónica      UNSA</string>
    <string name="version_1_3">Version 1.3</string>
    <string name="puntos_0">Puntos: 0</string>
    <string name="vidas_3">Vidas: 3</string>
    <string name="jugar">Jugar</string>
    <string name="acerca">Acerca</string>
    <string name="repuestas">Repuestas</string>
    <string name="version_1_4">Version 1.4</string>

    <string name="autoestima">Autoestima</string>
    <string name="integridad">Integridad</string>
    <string name="manejo_de_conflictos">Manejo de Conflictos</string>
    <string name="toma_de_decisiones">Toma de decisiones</string>

</resources>