<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Unidades">

    <Button
        android:id="@+id/button_tomadedeciciones"
        android:layout_width="336dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/aclonica"
        android:text="@string/toma_de_decisiones"
        android:textSize="20sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_manejodeconflictos" />

    <Button
        android:id="@+id/button_integridad"
        android:layout_width="276dp"
        android:layout_height="57dp"
        android:layout_marginTop="292dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/aclonica"
        android:text="Button"
        android:textSize="20sp"
        app:backgroundTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/integridad" />

    <Button
        android:id="@+id/button_manejodeconflictos"
        android:layout_width="346dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/aclonica"
        android:text="Button"
        android:textSize="20sp"
        app:backgroundTint="#9C27B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_integridad"
        tools:text="@string/manejo_de_conflictos" />

    <Button
        android:id="@+id/button_autoestima"
        android:layout_width="276dp"
        android:layout_height="57dp"
        android:background="@drawable/round_corner"
        android:fontFamily="@font/aclonica"
        android:text="Button"
        android:textSize="20sp"
        app:backgroundTint="#FF9800"
        app:layout_constraintBottom_toTopOf="@+id/button_integridad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872"
        tools:text="@string/autoestima" />

</androidx.constraintlayout.widget.ConstraintLayout>