<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jugar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Jugar">

    <LinearLayout
        android:layout_width="412dp"
        android:layout_height="700dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/vidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vidas_3"
                android:textAlignment="viewStart"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Puntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puntos_0"
                android:textAlignment="viewEnd"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="343dp"
            android:layout_height="574dp"
            android:layout_gravity="center"
            android:layout_weight="40"
            app:srcCompat="@mipmap/img1"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/txtedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Ingrese la palabra"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnconfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirmar" />

    </LinearLayout>

    <TextView
        android:text="@string/correcto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtcorrecto"
        android:layout_marginBottom="148dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="invisible" />

    <TextView
        android:text="@string/incorrecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtincorrecto"
        android:layout_alignBaseline="@+id/txtcorrecto"
        android:layout_alignBottom="@+id/txtcorrecto"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

</RelativeLayout>
